--- a/Book/Cho toi xin mot ve di tuoi tho/Thongtin.html
+++ b/Book/Cho toi xin mot ve di tuoi tho/Thongtin.html
@@ -302,9 +302,8 @@
                             <div class="col-xs-12">
                                 <span class="glyphicon-book"></span>
                                 <h3>
-                                    <a href="#" onclick="alert('Chưa cập nhật')"
-                                        title="Đảo Mộng Mơ">Tôi Thấy Hoa Vàng Trên Cỏ
-                                        Xanh</a>
+                                    <a href="../Toi khong ngung noi loi xin loi em/Thongtin.html"
+                                        title="Tôi không ngừng xin lỗi em">Tôi không ngừng xin lỗi em</a>
                                 </h3>
                             </div>
                         </div>
