--- a/Book/Toi khong ngung noi loi xin loi em/Thongtin.html
+++ b/Book/Toi khong ngung noi loi xin loi em/Thongtin.html
@@ -73,28 +73,26 @@
                         <div class="title-list book-intro">
                             <h2>Thông tin truyện</h2>
                         </div>
-                        <h3 class="title" itemprop="name">Đảo Mộng Mơ</h3>
+                        <h3 class="title" itemprop="name">Tôi không ngừng nói lời xin lỗi em</h3>
                         <div class="col-xs-12 col-sm-4 col-md-4 info-holder">
                             <div class="books">
                                 <div class="book">
-                                    <img src="Anh/daomongmo.png " alt="Cho Tôi Xin Một Vé Đi Tuổi Thơ"
+                                    <img src="Anh/user.jpg " alt="Cho Tôi Xin Một Vé Đi Tuổi Thơ"
                                         title="Cho Tôi Xin Một Vé Đi Tuổi Thơ">
                                 </div>
                             </div>
                             <div class="info">
                                 <div>
                                     <h3>Tác giả:</h3>
-                                    <a itemprop="author" target="_blank"
-                                        href="https://vi.wikipedia.org/wiki/Nguy%E1%BB%85n_Nh%E1%BA%ADt_%C3%81nh"
-                                        title="Nguyễn Nhật Ánh">Nguyễn Nhật Ánh</a>
+                                    <a itemprop="author" href="#" title="Lê Hoàng Phong">Lê Hoàng Phong</a>
                                 </div>
                                 <div>
                                     <h3>Thể loại:</h3>
-                                    <a href="#" itemprop="genre" title="Truyện Teen">Truyện Teen</a>
+                                    <a href="#" itemprop="genre" title="Truyện Teen">Không biết</a>
                                 </div>
                                 <div>
                                     <h3>Trạng thái:</h3>
-                                    <span class="text-success">Full</span>
+                                    <span class="text-success">Đang cập nhật</span>
                                 </div>
                                 <div>
                                     <h3>Tags:</h3>
@@ -105,32 +103,19 @@
                         </div>
                         <div class="col-xs-12 col-sm-8 col-md-8 desc">
                             <div class="desc-text desc-text-full" itemprop="description">
-                                <p style="text-align: justify; ">Đảo mộng mơ là truyện dành cho lứa tuổi teen, luôn
-                                    khiến người đọc phải bật cười vì sự ngô nghê trong cách nhìn của trẻ con. Một câu
-                                    chuyện trong veo, thuần khiết như chính tâm hồn của trẻ . Giống như bao đứa trẻ khác
-                                    chúng đều có những mơ mộng, tưởng tưởng và cố gắng biến nó thành sự thực. Câu chuyện
-                                    bắt đầu từ một đống cát, và được diễn ra theo nhân vật tôi - cu Tin. Có một hòn đảo
-                                    hoang, trên đảo có Chúa đảo, phu nhân Chúa đảo, và một chàng Thứ... Bảy. Hàng ngày
-                                    vợ chồng Chúa đảo và Thứ Bảy vẫn phải đi học, nhưng sau giờ học là một thế giới
-                                    khác, của đảo, của biển có cá mập, và rừng có thú dữ. Hấp dẫn, đầy quyến rũ, có cãi
-                                    vã, có cai trị, có yêu thương, có ẩu đả, và cả... những nụ hôn!
+                                <p style="text-align: justify; ">Tôi không ngừng nói lời xin lỗi em là truyện dành tôi giúp Lê
+                                    Hoàng Phong kể lại câu truyện của cậu ấy
                                 </p>
                                 <p style="text-align: justify; ">
                                     <br>
                                 </p>
-                                <p style="text-align: justify; ">Tin ghét ai gọi hòn đảo là “đống cát”. Và ba Tin đã
-                                    thừa nhận với cậu bé là ông đã nhìn thấy cậu trên hòn đảo bằng cái ống nhòm, rằng
-                                    ông không dám phiêu lưu trên đại dương để đi thăm chúa đảo. Cô giáo của Tin cũng nói
-                                    với cậu “không dám mạo hiểm bơi qua đại dương” để vào nhà, dù cô có thể xách giày đi
-                                    lên, đi xuống hòn đảo khá dễ dàng.
+                                <p style="text-align: justify; ">
                                 </p>
                                 <p style="text-align: justify; ">
                                     <br>
                                 </p>
                             </div>
                             <div class="showmore">
-                                <button type="button" class="btn btn-default btn-xs hide" title="Xem thêm">Xem thêm
-                                    »</button>
                             </div>
                         </div>
                     </div>
@@ -143,18 +128,17 @@
                                 <ul class="list-chapter">
                                     <li>
                                         <span class="glyphicon-book"></span>
-                                        <a href="chuong1.html"
-                                            title="Cho Tôi Xin Một Vé Đi Tuổi Thơ - Chương 1: Tóm lại là đã hết một ngày">
+                                        <a href="chuong1.html" title="Tôi không ngừng nói lời xin lỗi em- Chương 1.">
                                             <span class="chapter-text">
                                                 <span>Chương </span>
                                             </span>
                                             1
                                         </a>
                                     </li>
-                                    <li>
+                                    <!-- <li>
                                         <span class="glyphicon-book"></span>
                                         <a href="chuong2.html"
-                                            title="Cho Tôi Xin Một Vé Đi Tuổi Thơ - Chương 2: Bố mẹ tuyệt vời">
+                                            title="Tôi không ngừng nói lời xin lỗi em- Chương 2: Bố mẹ tuyệt vời">
                                             <span class="chapter-text">
                                                 <span>Chương </span>
                                             </span>
@@ -164,7 +148,7 @@
                                     <li>
                                         <span class="glyphicon-book"></span>
                                         <a href="chuong3.html"
-                                            title="Cho Tôi Xin Một Vé Đi Tuổi Thơ - Chương 3: Ðặt tên cho thế giới">
+                                            title="Tôi không ngừng nói lời xin lỗi em- Chương 3: Ðặt tên cho thế giới">
                                             <span class="chapter-text">
                                                 <span>Chương </span>
                                             </span>
@@ -174,7 +158,7 @@
                                     <li>
                                         <span class="glyphicon-book"></span>
                                         <a href="chuong4.html"
-                                            title="Cho Tôi Xin Một Vé Đi Tuổi Thơ - Chương 4: Buồn ơi là sầu">
+                                            title="Tôi không ngừng nói lời xin lỗi em- Chương 4: Buồn ơi là sầu">
                                             <span class="chapter-text">
                                                 <span>Chương </span>
                                             </span>
@@ -184,7 +168,7 @@
                                     <li>
                                         <span class="glyphicon-book"></span>
                                         <a href="chuong5.html"
-                                            title="Cho Tôi Xin Một Vé Đi Tuổi Thơ - Chương 5: Khi người ta lớn">
+                                            title="Tôi không ngừng nói lời xin lỗi em- Chương 5: Khi người ta lớn">
                                             <span class="chapter-text">
                                                 <span>Chương </span>
                                             </span>
@@ -194,7 +178,7 @@
                                     <li>
                                         <span class="glyphicon-book"></span>
                                         <a href="chuong6.html"
-                                            title="Cho Tôi Xin Một Vé Đi Tuổi Thơ - Chương 6: Tôi là thằng cu Mùi">
+                                            title="Tôi không ngừng nói lời xin lỗi em- Chương 6: Tôi là thằng cu Mùi">
                                             <span class="chapter-text">
                                                 <span>Chương </span>
                                             </span>
@@ -204,7 +188,7 @@
                                     <li>
                                         <span class="glyphicon-book"></span>
                                         <a href="chuong7.html"
-                                            title="Cho Tôi Xin Một Vé Đi Tuổi Thơ - Chương 7: Tôi ngoan trong bao lâu">
+                                            title="Tôi không ngừng nói lời xin lỗi em- Chương 7: Tôi ngoan trong bao lâu">
                                             <span class="chapter-text">
                                                 <span>Chương </span>
                                             </span>
@@ -214,7 +198,7 @@
                                     <li>
                                         <span class="glyphicon-book"></span>
                                         <a href="chuong8.html"
-                                            title="Cho Tôi Xin Một Vé Đi Tuổi Thơ - Chương 8: Chúng tôi trở thành lũ giết người như thế nào?">
+                                            title="Tôi không ngừng nói lời xin lỗi em- Chương 8: Chúng tôi trở thành lũ giết người như thế nào?">
                                             <span class="chapter-text">
                                                 <span>Chương </span>
                                             </span>
@@ -228,7 +212,7 @@
                                     <li>
                                         <span class="glyphicon-book"></span>
                                         <a href="chuong9.html"
-                                            title="Cho Tôi Xin Một Vé Đi Tuổi Thơ - Chương 9: Ai có biết bây giờ là mấy giờ rồi không?">
+                                            title="Tôi không ngừng nói lời xin lỗi em- Chương 9: Ai có biết bây giờ là mấy giờ rồi không?">
                                             <span class="chapter-text">
                                                 <span>Chương </span>
                                             </span>
@@ -238,7 +222,7 @@
                                     <li>
                                         <span class="glyphicon-book"></span>
                                         <a href="chuong10.html"
-                                            title="Cho Tôi Xin Một Vé Đi Tuổi Thơ - Chương 10: Và tôi đã chìm">
+                                            title="Tôi không ngừng nói lời xin lỗi em- Chương 10: Và tôi đã chìm">
                                             <span class="chapter-text">
                                                 <span>Chương </span>
                                             </span>
@@ -248,7 +232,7 @@
                                     <li>
                                         <span class="glyphicon-book"></span>
                                         <a href="chuong11.html"
-                                            title="Cho Tôi Xin Một Vé Đi Tuổi Thơ - Chương 11: Trang trại chó hoang">
+                                            title="Tôi không ngừng nói lời xin lỗi em- Chương 11: Trang trại chó hoang">
                                             <span class="chapter-text">
                                                 <span>Chương </span>
                                             </span>
@@ -258,7 +242,7 @@
                                     <li>
                                         <span class="glyphicon-book"></span>
                                         <a href="chuong12.html"
-                                            title="Cho Tôi Xin Một Vé Đi Tuổi Thơ - Chương 12: Cuối cùng là chuyến tàu không có người soát vé">
+                                            title="Tôi không ngừng nói lời xin lỗi em- Chương 12: Cuối cùng là chuyến tàu không có người soát vé">
                                             <span class="chapter-text">
                                                 <span>Chương</span>
                                             </span>
@@ -268,7 +252,7 @@
                                     <li>
                                         <span class="glyphicon-book"></span>
                                         <a href="chuong13.html"
-                                            title="Cho Tôi Xin Một Vé Đi Tuổi Thơ - Chương 12: Cuối cùng là chuyến tàu không có người soát vé">
+                                            title="Tôi không ngừng nói lời xin lỗi em- Chương 12: Cuối cùng là chuyến tàu không có người soát vé">
                                             <span class="chapter-text">
                                                 <span>Chương</span>
                                             </span>
@@ -278,7 +262,7 @@
                                     <li>
                                         <span class="glyphicon-book"></span>
                                         <a href="chuong14.html"
-                                            title="Cho Tôi Xin Một Vé Đi Tuổi Thơ - Chương 12: Cuối cùng là chuyến tàu không có người soát vé">
+                                            title="Tôi không ngừng nói lời xin lỗi em- Chương 12: Cuối cùng là chuyến tàu không có người soát vé">
                                             <span class="chapter-text">
                                                 <span>Chương</span>
                                             </span>
@@ -288,23 +272,23 @@
                                     <li>
                                         <span class="glyphicon-book"></span>
                                         <a href="chuong15.html"
-                                            title="Cho Tôi Xin Một Vé Đi Tuổi Thơ - Chương 12: Cuối cùng là chuyến tàu không có người soát vé">
+                                            title="Tôi không ngừng nói lời xin lỗi em- Chương 12: Cuối cùng là chuyến tàu không có người soát vé">
                                             <span class="chapter-text">
                                                 <span>Chương</span>
                                             </span>
                                             15
                                         </a>
-                                    </li>
-                                    <li>
+                                    </li> -->
+                                    <!-- <li>
                                         <span class="glyphicon-book"></span>
                                         <a href="chuong16.html"
-                                            title="Cho Tôi Xin Một Vé Đi Tuổi Thơ - Chương 12: Cuối cùng là chuyến tàu không có người soát vé">
+                                            title="Tôi không ngừng nói lời xin lỗi em- Chương 12: Cuối cùng là chuyến tàu không có người soát vé">
                                             <span class="chapter-text">
                                                 <span>Chương</span>
                                             </span>
                                             16
                                         </a>
-                                    </li>
+                                    </li> -->
                                 </ul>
                             </div>
                         </div>
@@ -324,7 +308,8 @@
                             <div class="col-xs-12">
                                 <span class="glyphicon-book"></span>
                                 <h3>
-                                    <a href="../Cho toi xin mot ve di tuoi tho/Thongtin.html" title="Cho Tôi xin Một Vé Đi Tuổi Thơ">Cho Tôi Xin Một Vé Đi Tuổi Thơ</a>
+                                    <a href="../Cho toi xin mot ve di tuoi tho/Thongtin.html"
+                                        title="Cho Tôi xin Một Vé Đi Tuổi Thơ">Cho Tôi Xin Một Vé Đi Tuổi Thơ</a>
                                 </h3>
                             </div>
                         </div>
@@ -341,8 +326,8 @@
                             <div class="col-xs-12">
                                 <span class="glyphicon-book"></span>
                                 <h3>
-                                    <a href="../Toi khong ngung noi loi xin loi em/Thongtin.html"
-                                        title="Tôi không ngừng xin lỗi em">Tôi không ngừng xin lỗi em</a>
+                                    <a href="Thongtin.html" title="Đảo Mộng Mơ">Tôi không ngừng xin
+                                        lỗi em</a>
                                 </h3>
                             </div>
                         </div>
