--- a/sach.html
+++ b/sach.html
@@ -137,23 +137,23 @@
                         <div class="row">
                             <div class="col-xs-3 col-sm-2 col-md-3 col-list-image">
                                 <div>
-                                    <img src="./Book/Toi Thay Hoa Vang Tren Co Xanh/Anh/tthvtcx.png" width="100px" height="150px" alt="">
+                                    <img src="./Book/Toi khong ngung noi loi xin loi em/Anh/user.jpg" width="100px" height="150px" alt="">
                                 </div>
                             </div>
                             <div class="col-xs-9 col-sm-10 col-md-9 col-list-info">
                                 <div>
                                     <span class="glyphicon glyphicon-book"></span>
                                     <h3 class="truyen-title" itemprop="name">
-                                        <a href="#" onclick="alert('Đang Cập Nhật')" title="Tôi Thấy Hoa Vàng Trên Cỏ Xanh" itemprop="url">Tôi Thấy Hoa Vàng Trên Cỏ Xanh</a>
+                                        <a href="./Book/Toi khong ngung noi loi xin loi em/Thongtin.html" title="Tôi không ngừng nói lời xin lỗi em" itemprop="url">Tôi không ngừng nói lời xin lỗi em</a>
                                     </h3>
                                     <span class="label-title label-new"></span>
                                     <span class="author" itemprop="author">
                                         <span class="glyphicon glyphicon-pencil"></span>
-                                        NGUYỄN NHẬT ÁNH
+                                        Lê Hoàng Phong
                                     </span>
                                     <span class="author">
                                         <span class="glyphicon glyphicon-list"></span>
-                                        81 chương
+                                        ... Chương
                                     </span>
                                 </div>
                             </div>
