--- a/amnhac.html
+++ b/amnhac.html
@@ -117,6 +117,7 @@
     <div class="option">
         <h2>Chọn Nhạc Muốn Nghe</h2>
         <button onclick="Tonghop_Music()">All Music</button>
+        <button onclick="Englishmusic()">English Music</button>
         <button onclick="Vu_Music()">Only Vũ Music</button>
     </div>
 
@@ -129,6 +130,9 @@
         function Tonghop_Music() {
             window.location.href = "tonghop-music.html"
 
+        }
+        function Englishmusic(){
+            window.location.href ="english.html"
         }
 
         const createSnowflake = () => {
