--- a/tonghop-music.html
+++ b/tonghop-music.html
@@ -86,7 +86,7 @@
             <br>
             <div class="music-div" onclick="togglePlay(2)" id="playButton2">2. Tình Yêu Chậm Trễ - MONSTAR</div>
             <br>
-            <div class="music-div" onclick="togglePlay(3)" id="playButton3">3. Anh Nhớ Ra - Vũ</div>
+            <div class="music-div" onclick="togglePlay(3)" id="playButton3">3. Love Story - Taylor Swift</div>
             <br>
             <div class="music-div" onclick="togglePlay(4)" id="playButton4">4. Jax - Like My Father </div>
             <br>
@@ -106,6 +106,8 @@
                 Đâu </div>
             <br>
             <div class="music-div" onclick="togglePlay(12)" id="playButton12">12. Bước Qua Nhau - Vũ</div>
+            <br>
+            <div class="music-div" onclick="togglePlay(13)" id="playButton3">3. Anh Nhớ Ra - Vũ</div>
             <br>
         </div>
         <!-- trình phát nhạc. -->
@@ -217,7 +219,7 @@
             } else if (songIndex === 2) {
                 return "./MP3/Tình yêu chậm trễ MOON ver  MONSTAR.mp3";
             } else if (songIndex === 3) {
-                return "./MP3/Anh Nhớ Ra - Vũ.mp3";
+                return "./MP3/Love Story  Taylor Swift Lyrics  Vietsub.mp3";
             } else if (songIndex === 4) {
                 return "./MP3/Jax-Like My Father.mp3";
             } else if (songIndex === 5) {
@@ -236,6 +238,8 @@
                 return "./MP3/Anh Chưa Thương Em Đến Vậy Đâu.mp3";
             } else if (songIndex === 12) {
                 return "./MP3/BƯỚC QUA NHAU  Vũ Official MV.mp3";
+            } else if (songIndex === 13) {
+                return "./MP3/Anh Nhớ Ra - Vũ.mp3";
             }
         }
 
