--- a/thantuong.html
+++ b/thantuong.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css(only)/css-thantuong.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
-<script>
+<!-- <script>
     $(document).ready(function () {
         var slides = $('.slideshow img');
         var currentSlide = 0;
@@ -19,7 +19,7 @@
             slides.eq(currentSlide).addClass('active');
         }
     });
-</script>
+</script> -->
 
 
 <body>
@@ -79,7 +79,7 @@
     </nav>
 
     <main>
-        <div id="than-tuong">
+        <!-- <div id="than-tuong">
             <div class="introduction-1">
                 <h2>Lalisa</h2>
                 <audio id="audioPlayer" src="./Background-Music/Windy-Hill.mp3" autoplay loop></audio>
@@ -114,8 +114,8 @@
                     <br><br><br><br>
                 </div>
             </div>
-            <!-- MV -->
-            <dialog class="dialog" id="mv">
+            MV -->
+            <!-- <dialog class="dialog" id="mv">
                 <div class="video-mp4">
                     <span class="close-btn" onclick="closeDialog()">&times;</span>
                     <video class="video" id="videomp4" controls poster="./Anh/money.jpg">
@@ -124,10 +124,13 @@
                 </div>
             </dialog>
 
-        </div>
+        </div> -->
+
+            <h1>Trang này trống, chưa có cập nhật gì hết =))</h1>
+
     </main>
 
-    <script>
+    <!-- <script>
 
         function xemmv() {
             var dialog = document.getElementById("mv");
@@ -146,7 +149,7 @@
             // Đóng dialog
             dialog.close();
         }
-    </script>
+    </script> -->
 
 
     <footer>
