--- a/tonghop-music.html
+++ b/tonghop-music.html
@@ -109,6 +109,8 @@
             <br>
             <div class="music-div" onclick="togglePlay(13)" id="playButton13">13. Anh Nhớ Ra - Vũ</div>
             <br>
+            <div class="music-div" onclick="togglePlay(14)" id="playButton14">14. Những Lời Hứa Bỏ Quên - Vũ</div>
+            <br>
         </div>
         <!-- trình phát nhạc. -->
         <div class="music-list">
@@ -240,6 +242,8 @@
                 return "./MP3/BƯỚC QUA NHAU  Vũ Official MV.mp3";
             } else if (songIndex === 13) {
                 return "./MP3/Anh Nhớ Ra - Vũ.mp3";
+            } else if (songIndex === 14) {
+                return "./MP3/NHỮNG LỜI HỨA BỎ QUÊN  VŨ x DEAR JANE Official MV.mp3";
             }
         }
 
