--- a/vu-music.html
+++ b/vu-music.html
@@ -93,6 +93,8 @@
             <br>
             <div class="music-div" onclick="togglePlay(7)" id="playButton7">7. Đông Kiếm Em - Vũ </div>
             <br>
+            <div class="music-div" onclick="togglePlay(8)" id="playButton8">8. Những Lời Hứa Bỏ Quên - Vũ </div>
+            <br>
         </div>
         <!-- trình phát nhạc. -->
         <div class="music-list">
@@ -212,6 +214,8 @@
                 return "./MP3/BƯỚC QUA NHAU  Vũ Official MV.mp3";
             } else if (songIndex === 7) {
                 return "./MP3/ĐÔNG KIẾM EM  Vũ Original.mp3";
+            } else if (songIndex ===8){
+                return "./MP3/NHỮNG LỜI HỨA BỎ QUÊN  VŨ x DEAR JANE Official MV.mp3"
             }
         }
 
