--- a/duan.html
+++ b/duan.html
@@ -107,6 +107,11 @@
                     <td><a href="https://github.com/thanhruy77/systemIot" target="_blank">
                             Thiết kế ứng dụng Android để điều khiển hệ thống tưới cây</a></td>
                 </tr>
+                <tr>
+                    <td>3</td>
+                    <td><a href="https://utehytaixiu.web.app/" target="_blank">
+                            Game giải trí (tk: custom || mk: 123) (game vui thôi nhé :))</a></td>
+                </tr>
             </table>
         </div>
 
