--- a/tonghop-music.html
+++ b/tonghop-music.html
@@ -111,6 +111,23 @@
             <br>
             <div class="music-div" onclick="togglePlay(14)" id="playButton14">14. Những Lời Hứa Bỏ Quên - Vũ</div>
             <br>
+            <div class="music-div" onclick="togglePlay(15)" id="playButton15">15. Photograph - Ed Sheeran</div>
+            <br>
+            <div class="music-div" onclick="togglePlay(16)" id="playButton16">16. Perfect - Ed Sheeran</div>
+            <br>
+            <div class="music-div" onclick="togglePlay(17)" id="playButton17">17. Cant take my eyes of you - Aesthetic
+            </div>
+            <br>
+            <div class="music-div" onclick="togglePlay(18)" id="playButton18">18. Love Yourself - Justin Bieber</div>
+            <br>
+            <div class="music-div" onclick="togglePlay(19)" id="playButton19">19. Flashlight - Jessie J from Pitch
+                Perfect 2</div>
+            <br>
+            <div class="music-div" onclick="togglePlay(20)" id="playButton20">20. Có hẹn với Thanh Xuân - Grey D</div>
+            <br>
+            <div class="music-div" onclick="togglePlay(21)" id="playButton21">21. Mặt trời của em - Hương Ly ft JustaTee
+            </div>
+            <br>
         </div>
         <!-- trình phát nhạc. -->
         <div class="music-list">
@@ -244,6 +261,20 @@
                 return "./MP3/Anh Nhớ Ra - Vũ.mp3";
             } else if (songIndex === 14) {
                 return "./MP3/NHỮNG LỜI HỨA BỎ QUÊN  VŨ x DEAR JANE Official MV.mp3";
+            } else if (songIndex === 15) {
+                return "./MP3/Photograph  Ed Sheeran.mp3";
+            } else if (songIndex === 16) {
+                return "./MP3/Ed Sheeran  Perfect.mp3";
+            } else if (songIndex === 17) {
+                return "./MP3/Cant take my eyes of you  Aesthetic Lyrics.mp3";
+            } else if (songIndex === 18) {
+                return "./MP3/Justin Bieber  Love Yourself Lyrics.mp3";
+            } else if (songIndex === 19) {
+                return "./MP3/Flashlight  Jessie J from Pitch Perfect 2 Lyrics  Vietsub.mp3";
+            } else if (songIndex === 20) {
+                return "./MP3/có hẹn với thanh xuân  MONSTAR  official music video.mp3";
+            } else if (songIndex === 21) {
+                return "./MP3/Mặt Trời Của Em  Official MV  Phương Ly ft JustaTee.mp3";
             }
         }
 
