--- a/index.html
+++ b/index.html
@@ -664,7 +664,9 @@
                     }
                 }
             </style>
-            <!-- <script>
+
+            
+            <script>
                 // Listen for changes in Realtime Database
                 database.ref("posts").on("value", (snapshot) => {
                     postList.innerHTML = "";
@@ -713,7 +715,7 @@
                 function share() {
                     alert("Tinh nang dang cap nhat");
                 }
-            </script> -->
+            </script>
 
 
 
