--- a/album.html
+++ b/album.html
@@ -3,6 +3,9 @@
 
 <head>
     <title>Album Ảnh</title>
+    <link rel="icon" href="Anh/duy.jpg" type="image/x-icon">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta property="og:image" content="https://blogthanhduy.web.app/Anh/duy.jpg">
     <link rel="stylesheet" href="css(only)/album.css">
 </head>
 
