--- a/sach.html
+++ b/sach.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Blog ThanhDuy</title>
-    <link rel="icon" href="Anh/thanhruy77.jpg" type="image/x-icon">
+    <link rel="icon" href="Anh/duy.jpg" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css(only)/css-sach.css">
 
