--- a/loginforthanhduy.html
+++ b/loginforthanhduy.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="Anh/thanhruy77.jpg" type="image/x-icon">
+    <link rel="icon" href="Anh/duy.jpg" type="image/x-icon">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="css(only)/loginforthanhduy.css" />
